--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -11,17 +11,23 @@
 
 <body>
   <main>
-    <img src="img.png" alt="respuesta">
-    <div class="container_table">
-      <div><strong>2</strong></div>
-      <div><strong>9</strong></div>
-      <div><strong>1</strong></div>
-      <div><strong>8</strong></div>
-      <div><strong>3</strong></div>
-      <div><strong>7</strong></div>
-      <div><strong>5</strong></div>
-      <div><strong>4</strong></div>
-      <div><strong>6</strong></div>
+    <div>
+      <h3>Tienes que llegar aca</h3>
+      <img src="img.png" alt="respuesta">
+    </div>
+    <div>
+      <h2>Partes desde aqui!!!</h2>
+      <div class="container_table">
+        <div><strong>2</strong></div>
+        <div><strong>9</strong></div>
+        <div><strong>1</strong></div>
+        <div><strong>8</strong></div>
+        <div><strong>3</strong></div>
+        <div><strong>7</strong></div>
+        <div><strong>5</strong></div>
+        <div><strong>4</strong></div>
+        <div><strong>6</strong></div>
+      </div>
     </div>
   </main>
 </body>
