--- a/index.html
+++ b/index.html
@@ -61,9 +61,18 @@
     <div>item10</div>
   </div>
 
-  <h2>Tambien posible trabajar el <a href="./areas/">grid areas</a> </h2>
+  <h2>Tambien es posible trabajar el <a href="./areas/">grid areas</a> </h2>
 
-  <h2>Con lo visto en clase, podrias realizar <a href="./ejercicio/">este ejercicio</a>? </h2>
+  <ul>
+    <li>
+      <p>Con lo visto en clase, realiza <a href="./ejercicio/">este ejercicio</a></p>
+    </li>
+    <li>
+      <p>Subamos de nivel, realiza esto con grid, <a href="https://flexdoc.netlify.app/ejercicioflex/">ver ejercicio</a>
+      </p>
+    </li>
+  </ul>
+
 
 </body>
 
